Change implementation from using GitHub Markdown Rendering API to using marked and highlight.js. Because rate limit of GitHub Markdown Rendering API for unauthenticated requests was changed from 5,000 per hour to 60 per hour. http://developer.github.com/changes/2012-10-14-rate-limit-changes/

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "markup",
-  "version": "0.0.3",
-  "description": "realtime rendering markdown using github api",
+  "version": "0.0.4",
+  "description": "realtime markdown renderer using marked, highlight.js and socket.io",
   "repository": { "type": "git", "url": "git://github.com/Jxck/markup.git" },
   "main": "index.js",
   "bin": {
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "connect": "~2.4.3",
-    "socket.io": "~0.9.10"
+    "socket.io": "~0.9.10",
+    "marked": "~0.2.8",
+    "highlight.js": "~7.3.0"
   },
   "devDependencies": {},
   "scripts": {
